--- a/htmlcss/2-css/asset/css/style.css
+++ b/htmlcss/2-css/asset/css/style.css
@@ -1,5 +1,23 @@
+* {
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+}
+ul, ol {
+    list-style: none;
+}
+
+/*html {*/
+/*    font-size: 62.5%;*/
+/*}*/
+
 body {
     background-color: aquamarine;
+    /*font-family: Verdana, Arial, sans-serif;*/
+    /*font-weight: 400;*/
+    /*font-size: 14px;*/
+    /*line-height: 1.4;*/
+    font: 400 14px/1.4 Verdana, Arial, sans-serif;
 }
 /* Selection par balise */
 div section p span {
@@ -34,6 +52,44 @@ input[type=submit] {
     color: lime;
     font-size: 50px;
 }
+/* Sélecteur vague */
 #selectorvague p ~ span {
     background-color: magenta;
+}
+/* Sélecteur enfant direct */
+#container > ul {
+    border: 1px solid black;
+}
+
+#child p:first-child{
+    color: pink;
+}
+#child p:last-child {
+    color: tomato;
+}
+#child p:nth-child(2), #child p:nth-child(5) {
+    color: lime;
+}
+#child p:nth-child(3n + 1) {
+    font-size: 30px;
+}
+
+/* block inline */
+#block {
+    background-color: blue;
+}
+#block p {
+    background-color: lime;
+    display: inline;
+}
+#block a {
+    background-color: darkgoldenrod;
+    display: inline-block;
+}
+
+#navigation ul {
+    text-align: center;
+}
+#navigation ul li  {
+    display: inline-block;
 }
