--- a/htmlcss/2-css/asset/css/style.css
+++ b/htmlcss/2-css/asset/css/style.css
@@ -13,6 +13,12 @@ ul, ol {
 
 body {
     background-color: aquamarine;
+    background-color: #FD007B;
+    background-color: rgb(255,255,255);
+    background-color: rgba(255,255,255,.5);
+
+
+
     /*font-family: Verdana, Arial, sans-serif;*/
     /*font-weight: 400;*/
     /*font-size: 14px;*/
