--- a/htmlcss/7-sym/correction/asset/css/style.css
+++ b/htmlcss/7-sym/correction/asset/css/style.css
@@ -38,7 +38,29 @@ body {
 .wrap2 {max-width: 1200px; width:100%;margin: 0 auto;}
 .wrap3 {max-width: 500px; width:100%;margin: 0 auto;}
 
-#masthead {}
+#masthead {
+    background-color: var(--vert);
+    position: fixed;
+    width: 100%;
+    padding: .6rem;
+}
+#masthead .bigwrap {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+#masthead .logo {
+    font-family: 'Libre Baskerville', serif;
+    font-size: 1.9rem;
+}
+#masthead nav ul {
+    display: flex;
+    gap:1rem;
+}
+
+
+
+
 #intro {}
 #component {}
 #learn {}
