--- a/htmlcss/7-sym/correction/asset/css/style.css
+++ b/htmlcss/7-sym/correction/asset/css/style.css
@@ -61,6 +61,10 @@ body {
 }
 #masthead nav ul a {
     color: var(--blanc);
+    transition: color .5s;
+}
+#masthead nav ul a:hover {
+    color: #000;
 }
 
 
